--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,7 @@
 {
-  "name": "VerdantView Expense Tracker",
+  "name": "VerdantView",
   "short_name": "VerdantView",
   "description": "Your personal expense tracker, offline-first and AI-powered.",
-  "start_url": "/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#22c55e",
   "icons": [
     {
       "src": "/icons/icon-192x192.png",
@@ -17,5 +13,10 @@
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "theme_color": "#ffffff",
+  "background_color": "#ffffff",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait"
 }
